force-app/main/default/objects/DocumentalPayloadAdministration__c/DocumentalPayloadAdministration__c.object-meta.xml
<CustomObject>
    <label>Amministrazione Payload Documentale</label>
    <nameField>
        <displayFormat>APLD-{0000}</displayFormat>
        <label>Amministrazione Payload</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amministrazione Payload Documentale</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>