force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Classe Apex</label>
    <length>255</length>
    <type>Text</type>
</CustomField>