force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/Context1__c.field-meta.xml
<CustomField>
    <fullName>Context1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order</label>
    <type>Checkbox</type>
</CustomField>