force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/Context2__c.field-meta.xml
<CustomField>
    <fullName>Context2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case</label>
    <type>Checkbox</type>
</CustomField>