force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/Context3__c.field-meta.xml
<CustomField>
    <fullName>Context3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account</label>
    <type>Checkbox</type>
</CustomField>