force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/Expression__c.field-meta.xml
<CustomField>
    <fullName>Expression__c</fullName>
    <label>Espressione Regolare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>