force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <label>Field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>