force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/Field3__c.field-meta.xml
<CustomField>
    <fullName>Field3__c</fullName>
    <label>Field 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>