force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/IsData__c.field-meta.xml
<CustomField>
    <fullName>IsData__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data</label>
    <type>Checkbox</type>
</CustomField>