force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/Iterative__c.field-meta.xml
<CustomField>
    <fullName>Iterative__c</fullName>
    <label>Iterative</label>
    <length>5</length>
    <type>Text</type>
</CustomField>