force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/ManageAmount__c.field-meta.xml
<CustomField>
    <fullName>ManageAmount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bonifica Importi</label>
    <type>Checkbox</type>
</CustomField>