force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/Object1__c.field-meta.xml
<CustomField>
    <fullName>Object1__c</fullName>
    <label>sObject 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>