force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/Object2__c.field-meta.xml
<CustomField>
    <fullName>Object2__c</fullName>
    <label>sObject 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>