force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/Object3__c.field-meta.xml
<CustomField>
    <fullName>Object3__c</fullName>
    <label>sObject 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>