force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/OrderPayloadField__c.field-meta.xml
<CustomField>
    <fullName>OrderPayloadField__c</fullName>
    <label>Ordinamento Campi Payload</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>