force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/OrderSection__c.field-meta.xml
<CustomField>
    <fullName>OrderSection__c</fullName>
    <label>Ordinamento Sezione</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>