force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/PayloadField__c.field-meta.xml
<CustomField>
    <fullName>PayloadField__c</fullName>
    <label>Field Tracciato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>