force-app/main/default/objects/DocumentalPayloadAdministration__c/fields/Separetor__c.field-meta.xml
<CustomField>
    <fullName>Separetor__c</fullName>
    <label>Separatore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>